# fastapi-ormar-pureconf-auth

./: .pre-commit-config.yaml  cookiecutter.json  cookiecutter.yaml  pyproject.toml
{{ cookiecutter.project.name }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project.name }}/{{ cookiecutter.project.name }}/: __about__.py
{{ cookiecutter.project_name }}/: pyproject.toml
{{project_name}}/: LICENSE  pyproject.toml
{{project_name}}/{{project_name}}/: __init__.py
