[project]
name = "fastapi-ormar-pureconf-auth"
version = "0.0.1"
description = "Boilerplate FastAPI's with ormar ORM on sitri's pure cofiguration in TOML and authentication on. JWT."
authors = [
    {name = "Alexander Lavrov", email = "admin@egnod.dev"},
]
dependencies = []
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit==2.20.0",
]


[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
'''

[tool.isort]
known_first_party = "{{ cookiecutter.project_name }}"
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pycln]
all = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_site_packages = true
strict_optional = false
strict = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
disable_error_code = ["valid-type", "call-arg"]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
